objects/New_Object__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Drivers_License__c</fullName>
        <label>Drivers License</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field1__c</fullName>
        <label>Field1</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingState__c</fullName>
        <label>MailingState</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <label>New Object</label>
    <nameField>
        <label>New Obect Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>New Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>VerifyAge</fullName>
        <active>true</active>
        <description>Validates that the value of a custom date field is a weekday (not Saturday or Sunday).</description>
        <errorConditionFormula>AND(
MailingState__c = &quot;CA&quot;,
NOT(REGEX( Drivers_License__c , &quot;([A-Z]\\d{7})?&quot;))
)</errorConditionFormula>
        <errorDisplayField>Drivers_License__c</errorDisplayField>
        <errorMessage>Invalid California driver&apos;s license format.</errorMessage>
    </validationRules>
</CustomObject>